# Simple-Typer-Game

./: CMakeLists.txt  README.md  main.cpp
Txts/: wordlist.txt
